termine los integrantes a afalta de foto de marco, cambie el nombre de la cvita que estaba mal en index, he arreglado el css y he empezado el quinteto.html

--- a/estilo.css
+++ b/estilo.css
@@ -216,7 +216,9 @@ img, video, iframe { /* Regla general para imágenes y videos, crucial para la r
     height: auto;
     display: block;
 }
-
+#img-quinteto {
+    margin:5vw;
+}
 .imagen-partituras {
     width: 100vw;
     position: relative;
