he quitado paja de los miembros y he puesto el fondo de otro color

--- a/estilo.css
+++ b/estilo.css
@@ -15,6 +15,7 @@ body {
     line-height: 1.6;
     text-align: justify;
     font-size: 18px;
+    background-color: #f5f5dc; 
 }
 
 body a {
@@ -221,8 +222,9 @@ img, video, iframe {
 }
 
 .imagenes-miembros img {
-    width: 100%;
+    width: 80%;
     height: auto;
+    transform: translateY(-20%);
 }
 
 .imagen-presentacion {
